--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -3,13 +3,13 @@
 	height:100%;
 	min-width: 1024px;
 	min-height: 600px;
-	background: url(../Image/WallPaper-HomePage.png) no-repeat;
+	background: url(../Image/wallhaven-529464_1920x1080.png) no-repeat;
 	margin: 0px;
 	background-size: cover;
 }
 
 .BackGround-Filter {
-	background-color: rgba(255, 255, 255, 0.7);
+	background-color: rgba(255,255,255,0.5);
 	width:  100%;
 	min-width: 1024px;
 	height: 100%;
