--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -1,11 +1,11 @@
 .BackGround {
 	width: 100%;
-	height:100%;
 	min-width: 1024px;
 	min-height: 600px;
 	background: url(../Image/WallPaper-HomePage.png) no-repeat;
 	margin: 0px;
-	background-size: cover;
+	background-size: 100% auto;
+	background-attachment:fixed;
 }
 
 .BackGround-Filter {
