--- a/css/StyleCSS/Button.css
+++ b/css/StyleCSS/Button.css
@@ -60,7 +60,28 @@
 .RoundButton {
     border-radius: 30px;
     border: hidden;
-    border-width: 2px;
+    background-color: white;
+    box-shadow:0px 0px 2px 1px rgb(150,150,150);
+    width: 30px;
+    height: 30px;
+    margin-bottom: 10px;
+    padding: 15px 15px 15px 15px;
+    line-height: 30px;
+}
+
+.RoundMessage {
+	border-radius: 65px;
+    border: hidden;
+    background-color: white;
+    box-shadow:0px 0px 2px 1px rgb(150,150,150);
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+    padding: 25px 25px 25px 25px;
+    line-height: 30px;
+}
+
+.SquareButton {
     background-color: white;
     box-shadow:0px 0px 2px 1px rgb(150,150,150);
     width: 30px;
